# ros2_webots_sandbox

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
launch/: simulation.launch  single_robot_controller.launch
protos/: TESTBENCH.stl
protos/maps/: shackletonSTL.proto  terrainmap.proto  worldmap.proto
protos/supervisor/: Supervisor.proto
ros2_webots_sandbox/: webots_robot_controller.py  webots_robot_supervisor_controller.py  webots_supervisor_controller.py
scripts/: start_simulator.py  start_single.py  start_webots_ros_supervisor.py  stl2elevationmap.py
worlds/: sandbox_1.wbt  sandbox_all.wbt  terrain_example.wbt  terrain_example_single.wbt
