<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_webots_sandbox</name>
  <version>0.0.0</version>
  <description>Simulation environment using Webots</description>
  <author email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</author>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>
  <author email="sebastian.stelter@cranfield.ac.uk">Sebastian Stelter</author>
  <maintainer email="sebastian.stelter@cranfield.ac.uk">Sebastian Stelter</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>urdf</depend>
  <depend>bitbots_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>std_msgs</depend>
  <depend>bitbots_docs</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>python3-transforms3d</depend>
  <depend>python3-numpy</depend>
  <depend>python3-psutil</depend>
  <depend>std_srvs</depend>

  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
